# voice-input-mlx

./: .env.example  .gitignore  LICENSE  README.md  com.voice-input.client.plist.template  com.voice-input.server.plist.template  install.sh  mac_client.py  newsyslog.conf.template  pyproject.toml  requirements.txt  voice_input.py
deploy/: com.voice-input.client.plist.template  com.voice-input.server.plist.template  newsyslog.conf.template
src/client/: mac_client.py
src/server/: transcriber.py  vad_engine.py  voice_input.py  ws_server.py
